--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -29,11 +29,15 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Producto" asp-action="GetAll"><i class="fa-solid fa-toolbox" style="color: #143e6b;"></i> Productos</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Producto" asp-action="Index"><i class="fa-solid fa-toolbox" style="color: #143e6b;"></i> Productos</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Proveedor" asp-action="Index"><i class="fa-solid fa-handshake" style="color: #143e6b;"></i> Proveedores</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item ml-auto">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="VentaProducto" asp-action="Index"><i class="fa-solid fa-cart-shopping"></i> Comprar</a>
+                        </li>
                     </ul>
-                </div>
+                </div>  
             </div>
         </nav>
     </header>
