--- a/PL/Views/Producto/Index.cshtml
+++ b/PL/Views/Producto/Index.cshtml
@@ -19,7 +19,8 @@
 
     <div class="row">
         <div class="col-auto ms-auto">
-            <button id="btnAgregar" onclick="AbrirModal()" class="btn btn-success"><i class="fa-regular fa-square-plus"></i></button>
+            <a class="btn btn-dark" href="@Url.Action("Reporte", "Producto")"><i class="fa-solid fa-file-pdf"></i> Reporte</a>
+            <button id="btnAgregar" onclick="AbrirModal()" class="btn btn-success"><i class="fa-regular fa-square-plus"></i> Agregar</button>
         </div>
     </div>
     <br />
